pulse/share/pulse/examples/dice/cbor/extern/CBOR.h

typedef struct cbor_int_s
{
  uint8_t cbor_int_type;
  uint64_t cbor_int_value;
}
cbor_int;
typedef struct cbor_string_s
{
  uint8_t cbor_string_type;
  uint64_t cbor_string_length;
  uint8_t *cbor_string_payload;
}
cbor_string;
typedef struct cbor_serialized_s
{
  size_t cbor_serialized_size;
  uint8_t *cbor_serialized_payload;
}
cbor_serialized;
typedef struct cbor_s cbor;
typedef struct cbor_s cbor;
typedef struct cbor_tagged0_s
{
  uint64_t cbor_tagged0_tag;
  cbor *cbor_tagged0_payload;
}
cbor_tagged0;
typedef struct cbor_s cbor;
typedef struct cbor_s cbor;
typedef struct cbor_array_s
{
  uint64_t cbor_array_length;
  cbor *cbor_array_payload;
}
cbor_array;
typedef struct cbor_map_entry_s cbor_map_entry;
typedef struct cbor_map_s
{
  uint64_t cbor_map_length;
  cbor_map_entry *cbor_map_payload;
}
cbor_map;
typedef uint8_t cbor_tags;
typedef struct cbor_s
{
  cbor_tags tag;
  union {
    cbor_int case_CBOR_Case_Int64;
    cbor_string case_CBOR_Case_String;
    cbor_tagged0 case_CBOR_Case_Tagged;
    cbor_array case_CBOR_Case_Array;
    cbor_map case_CBOR_Case_Map;
    uint8_t case_CBOR_Case_Simple_value;
    cbor_serialized case_CBOR_Case_Serialized;
  }
  ;
}
cbor;
typedef struct cbor_map_entry_s
{
  cbor cbor_map_entry_key;
  cbor cbor_map_entry_value;
}
cbor_map_entry;
typedef uint8_t cbor_array_iterator_payload_t_tags;
typedef struct cbor_array_iterator_payload_t_s
{
  cbor_array_iterator_payload_t_tags tag;
  union {
    cbor *case_CBOR_Array_Iterator_Payload_Array;
    uint8_t *case_CBOR_Array_Iterator_Payload_Serialized;
  }
  ;
}
cbor_array_iterator_payload_t;
typedef struct cbor_array_iterator_t_s
{
  uint64_t cbor_array_iterator_length;
  cbor_array_iterator_payload_t cbor_array_iterator_payload;
}
cbor_array_iterator_t;
typedef uint8_t cbor_map_iterator_payload_t_tags;
typedef struct cbor_map_iterator_payload_t_s
{
  cbor_map_iterator_payload_t_tags tag;
  union {
    cbor_map_entry *case_CBOR_Map_Iterator_Payload_Map;
    uint8_t *case_CBOR_Map_Iterator_Payload_Serialized;
  }
  ;
}
cbor_map_iterator_payload_t;
typedef struct cbor_map_iterator_t_s
{
  uint64_t cbor_map_iterator_length;
  cbor_map_iterator_payload_t cbor_map_iterator_payload;
}
cbor_map_iterator_t;
extern cbor cbor_dummy;
extern cbor cbor_map_entry_key(cbor_map_entry uu___);
extern cbor cbor_map_entry_value(cbor_map_entry uu___);
extern cbor_map_entry cbor_mk_map_entry(cbor key, cbor value);
extern uint8_t cbor_destr_simple_value(cbor c);
extern cbor cbor_constr_simple_value(uint8_t value);
extern cbor_string cbor_destr_string(cbor c);
extern cbor cbor_constr_string(uint8_t typ, uint8_t *a, uint64_t len);
extern cbor cbor_constr_array(cbor *a, uint64_t len);
extern uint64_t cbor_array_length(cbor a);
extern cbor cbor_array_index(cbor a, size_t i);
extern cbor_array_iterator_t cbor_dummy_array_iterator;
extern cbor_array_iterator_t cbor_array_iterator_init(cbor a);
extern bool cbor_array_iterator_is_done(cbor_array_iterator_t i);
extern cbor cbor_array_iterator_next(cbor_array_iterator_t *pi);
extern cbor *cbor_read_array(cbor a, cbor *dest, uint64_t len);
extern uint8_t cbor_get_major_type(cbor a);
extern int16_t cbor_compare_aux(cbor c1, cbor c2);
extern size_t cbor_write(cbor c, uint8_t *out, size_t sz);