pulse/share/pulse/examples/dice/cbor/extern/CBOR_Pulse_Extern.rs

#[test]
fn bindgen_test_layout_cbor_s() {
    const UNINIT: ::std::mem::MaybeUninit<cbor_s> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cbor_s>(),
        32usize,
        concat!("Size of: ", stringify!(cbor_s))
    );
    assert_eq!(
        ::std::mem::align_of::<cbor_s>(),
        8usize,
        concat!("Alignment of ", stringify!(cbor_s))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).tag) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cbor_s),
            "::",
            stringify!(tag)
        )
    );
}
extern "C" {
    pub fn cbor_get_major_type(a: cbor) -> u8;
}
extern "C" {
    pub fn cbor_write(c: cbor, out: *mut u8, sz: usize) -> usize;
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct cbor_map_entry_s {
    pub cbor_map_entry_key: cbor,
    pub cbor_map_entry_value: cbor,
}
#[test]
fn bindgen_test_layout_cbor_map_entry_s() {
    const UNINIT: ::std::mem::MaybeUninit<cbor_map_entry_s> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cbor_map_entry_s>(),
        64usize,
        concat!("Size of: ", stringify!(cbor_map_entry_s))
    );
    assert_eq!(
        ::std::mem::align_of::<cbor_map_entry_s>(),
        8usize,
        concat!("Alignment of ", stringify!(cbor_map_entry_s))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).cbor_map_entry_key) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cbor_map_entry_s),
            "::",
            stringify!(cbor_map_entry_key)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).cbor_map_entry_value) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(cbor_map_entry_s),
            "::",
            stringify!(cbor_map_entry_value)
        )
    );
}
pub type cbor_array_iterator_payload_t_tags = u8;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct cbor_array_iterator_payload_t_s {
    pub tag: cbor_array_iterator_payload_t_tags,
    pub __bindgen_anon_1: cbor_array_iterator_payload_t_s__bindgen_ty_1,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union cbor_array_iterator_payload_t_s__bindgen_ty_1 {
    pub case_CBOR_Array_Iterator_Payload_Array: *mut cbor,
    pub case_CBOR_Array_Iterator_Payload_Serialized: *mut u8,
}
#[test]
fn bindgen_test_layout_cbor_array_iterator_payload_t_s__bindgen_ty_1() {
    const UNINIT: ::std::mem::MaybeUninit<cbor_array_iterator_payload_t_s__bindgen_ty_1> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cbor_array_iterator_payload_t_s__bindgen_ty_1>(),
        8usize,
        concat!(
            "Size of: ",
            stringify!(cbor_array_iterator_payload_t_s__bindgen_ty_1)
        )
    );
    assert_eq!(
        ::std::mem::align_of::<cbor_array_iterator_payload_t_s__bindgen_ty_1>(),
        8usize,
        concat!(
            "Alignment of ",
            stringify!(cbor_array_iterator_payload_t_s__bindgen_ty_1)
        )
    );
    assert_eq!(
        unsafe {
            ::std::ptr::addr_of!((*ptr).case_CBOR_Array_Iterator_Payload_Array) as usize
                - ptr as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cbor_array_iterator_payload_t_s__bindgen_ty_1),
            "::",
            stringify!(case_CBOR_Array_Iterator_Payload_Array)
        )
    );
    assert_eq!(
        unsafe {
            ::std::ptr::addr_of!((*ptr).case_CBOR_Array_Iterator_Payload_Serialized) as usize
                - ptr as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cbor_array_iterator_payload_t_s__bindgen_ty_1),
            "::",
            stringify!(case_CBOR_Array_Iterator_Payload_Serialized)
        )
    );
}
#[test]
fn bindgen_test_layout_cbor_array_iterator_payload_t_s() {
    const UNINIT: ::std::mem::MaybeUninit<cbor_array_iterator_payload_t_s> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cbor_array_iterator_payload_t_s>(),
        16usize,
        concat!("Size of: ", stringify!(cbor_array_iterator_payload_t_s))
    );
    assert_eq!(
        ::std::mem::align_of::<cbor_array_iterator_payload_t_s>(),
        8usize,
        concat!("Alignment of ", stringify!(cbor_array_iterator_payload_t_s))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).tag) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cbor_array_iterator_payload_t_s),
            "::",
            stringify!(tag)
        )
    );
}
pub type cbor_array_iterator_payload_t = cbor_array_iterator_payload_t_s;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct cbor_array_iterator_t_s {
    pub cbor_array_iterator_length: u64,
    pub cbor_array_iterator_payload: cbor_array_iterator_payload_t,
}
#[test]
fn bindgen_test_layout_cbor_array_iterator_t_s() {
    const UNINIT: ::std::mem::MaybeUninit<cbor_array_iterator_t_s> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cbor_array_iterator_t_s>(),
        24usize,
        concat!("Size of: ", stringify!(cbor_array_iterator_t_s))
    );
    assert_eq!(
        ::std::mem::align_of::<cbor_array_iterator_t_s>(),
        8usize,
        concat!("Alignment of ", stringify!(cbor_array_iterator_t_s))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).cbor_array_iterator_length) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cbor_array_iterator_t_s),
            "::",
            stringify!(cbor_array_iterator_length)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).cbor_array_iterator_payload) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(cbor_array_iterator_t_s),
            "::",
            stringify!(cbor_array_iterator_payload)
        )
    );
}
pub type cbor_array_iterator_t = cbor_array_iterator_t_s;
pub type cbor_map_iterator_payload_t_tags = u8;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct cbor_map_iterator_payload_t_s {
    pub tag: cbor_map_iterator_payload_t_tags,
    pub __bindgen_anon_1: cbor_map_iterator_payload_t_s__bindgen_ty_1,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union cbor_map_iterator_payload_t_s__bindgen_ty_1 {
    pub case_CBOR_Map_Iterator_Payload_Map: *mut cbor_map_entry,
    pub case_CBOR_Map_Iterator_Payload_Serialized: *mut u8,
}
#[test]
fn bindgen_test_layout_cbor_map_iterator_payload_t_s__bindgen_ty_1() {
    const UNINIT: ::std::mem::MaybeUninit<cbor_map_iterator_payload_t_s__bindgen_ty_1> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cbor_map_iterator_payload_t_s__bindgen_ty_1>(),
        8usize,
        concat!(
            "Size of: ",
            stringify!(cbor_map_iterator_payload_t_s__bindgen_ty_1)
        )
    );
    assert_eq!(
        ::std::mem::align_of::<cbor_map_iterator_payload_t_s__bindgen_ty_1>(),
        8usize,
        concat!(
            "Alignment of ",
            stringify!(cbor_map_iterator_payload_t_s__bindgen_ty_1)
        )
    );
    assert_eq!(
        unsafe {
            ::std::ptr::addr_of!((*ptr).case_CBOR_Map_Iterator_Payload_Map) as usize - ptr as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cbor_map_iterator_payload_t_s__bindgen_ty_1),
            "::",
            stringify!(case_CBOR_Map_Iterator_Payload_Map)
        )
    );
    assert_eq!(
        unsafe {
            ::std::ptr::addr_of!((*ptr).case_CBOR_Map_Iterator_Payload_Serialized) as usize
                - ptr as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cbor_map_iterator_payload_t_s__bindgen_ty_1),
            "::",
            stringify!(case_CBOR_Map_Iterator_Payload_Serialized)
        )
    );
}
#[test]
fn bindgen_test_layout_cbor_map_iterator_payload_t_s() {
    const UNINIT: ::std::mem::MaybeUninit<cbor_map_iterator_payload_t_s> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cbor_map_iterator_payload_t_s>(),
        16usize,
        concat!("Size of: ", stringify!(cbor_map_iterator_payload_t_s))
    );
    assert_eq!(
        ::std::mem::align_of::<cbor_map_iterator_payload_t_s>(),
        8usize,
        concat!("Alignment of ", stringify!(cbor_map_iterator_payload_t_s))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).tag) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cbor_map_iterator_payload_t_s),
            "::",
            stringify!(tag)
        )
    );
}
pub type cbor_map_iterator_payload_t = cbor_map_iterator_payload_t_s;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct cbor_map_iterator_t_s {
    pub cbor_map_iterator_length: u64,
    pub cbor_map_iterator_payload: cbor_map_iterator_payload_t,
}
#[test]
fn bindgen_test_layout_cbor_map_iterator_t_s() {
    const UNINIT: ::std::mem::MaybeUninit<cbor_map_iterator_t_s> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cbor_map_iterator_t_s>(),
        24usize,
        concat!("Size of: ", stringify!(cbor_map_iterator_t_s))
    );
    assert_eq!(
        ::std::mem::align_of::<cbor_map_iterator_t_s>(),
        8usize,
        concat!("Alignment of ", stringify!(cbor_map_iterator_t_s))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).cbor_map_iterator_length) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cbor_map_iterator_t_s),
            "::",
            stringify!(cbor_map_iterator_length)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).cbor_map_iterator_payload) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(cbor_map_iterator_t_s),
            "::",
            stringify!(cbor_map_iterator_payload)
        )
    );
}
pub type cbor_map_iterator_t = cbor_map_iterator_t_s;
extern "C" {
    pub static mut cbor_dummy: cbor;
}
extern "C" {
    pub fn cbor_map_entry_key(uu___: cbor_map_entry) -> cbor;
}
extern "C" {
    pub fn cbor_map_entry_value(uu___: cbor_map_entry) -> cbor;
}
extern "C" {
    pub fn cbor_mk_map_entry(key: cbor, value: cbor) -> cbor_map_entry;
}
extern "C" {
    pub fn cbor_compare_aux(c1: cbor, c2: cbor) -> i16;
}
extern "C" {
    pub fn cbor_constr_array(a: *mut cbor, len: u64) -> cbor;
}
extern "C" {
    pub fn cbor_array_length(a: cbor) -> u64;
}
extern "C" {
    pub fn cbor_array_index(a: cbor, i: usize) -> cbor;
}
extern "C" {
    pub static mut cbor_dummy_array_iterator: cbor_array_iterator_t;
}
extern "C" {
    pub fn cbor_array_iterator_init(a: cbor) -> cbor_array_iterator_t;
}
extern "C" {
    pub fn cbor_array_iterator_is_done(i: cbor_array_iterator_t) -> bool;
}
extern "C" {
    pub fn cbor_array_iterator_next(pi: *mut cbor_array_iterator_t) -> cbor;
}
extern "C" {
    pub fn cbor_read_array(a: cbor, dest: *mut cbor, len: u64) -> *mut cbor;
}
extern "C" {
    pub fn cbor_destr_string(c: cbor) -> cbor_string;
}
extern "C" {
    pub fn cbor_constr_string(typ: u8, a: *mut u8, len: u64) -> cbor;
}
extern "C" {
    pub fn cbor_destr_simple_value(c: cbor) -> u8;
}
extern "C" {
    pub fn cbor_constr_simple_value(value: u8) -> cbor;
}
